# automouse

./: .gitignore  BUILD.md  LICENSE  README.md  build_installer.py  build_windows.py  claude.md  installer.iss  pyproject.toml  requirements-build.txt  requirements.txt
automouse/: __init__.py  __main__.py  config.py  config.yaml  hid_monitor.py  keyboard.py  main.py  rawinput.py  state.py
